# rust-api

./: .env  .env.example  .gitignore  Cargo.toml  docker-compose.yml
src/: main.rs
src/controllers/: user_controller.rs
src/database/: connection.rs
src/models/: connection.rs  user.rs
src/services/: user_service.rs
src/utils/: env_vars.rs  http_verbs.rs  mod.rs  supa_api.rs
