[package]
name = "rocket-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["postgres"] }
rocket = "0.4.11"
serde = { version = "1.0.152", features = ["derive"]}


[dependencies.rocket_contrib]
version = "0.4.10"
features = ["json"]
