[package]
name = "rocket-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["postgres"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
rocket = "0.4.11"
rocket_contrib = { version = "0.4.11", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }    
serde_json = "1.0.93"
dotenvy = "0.15"


# [dependencies.rocket_contrib]
# version = "0.4.10"
# features = ["json"]
